[FIX]: adjust font sizes for improved readability and remove redundant styles in CSS

--- a/index.css
+++ b/index.css
@@ -148,11 +148,6 @@
     text-decoration: underline dotted;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    font-size: inherit;
-    font-weight: inherit;
-  }
-
   a {
     color: inherit;
     -webkit-text-decoration: inherit;
